# ai-agent-workspace

./: .gitattributes  .gitignore  .gitmodules  .markdownlint.json  AGENTS.md  CLAUDE.md  README.md  aircraftnoise.code-workspace  ansible-all-my-things.code-workspace  copilot.instructions.md
.claude/commands/: create-adr.md  define-next-increment.md  generate-cursor-rules.md
.cursor/commands/: commit.md  create-adr.md  create-memory-bank-from-existing-project.md  improve-document-iteratively.md  (+1 more)
.devcontainer/: devcontainer.json
.omc/: project-memory.json
Rules/: 00-first-processing-steps.md  010-first-processing-steps.md  03-my-instructions.md  10-setup.md  100-persona.md  110-user.md  20-cline-memory-bank.md  310-collaboration.md  320-development-principles-practices.md  330-git-usage.md  40-collaboartion-principles-practices.md  400-markdown-formatting.md  510-clarify-current-project.md  510-documentation-strategy.md  520-memory-bank-of-current-project.md  530-clarify-current-project.md  70-markdown-formatting.md  900-confirm-readiness.md
docs/: cursor_analyze_rule_degradation.md  synchronize-repos-with-vm.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
python/: README.md  pyproject.toml
python/src/synchronize/: main.py
python/tests/synchronize/: test_main.py
scripts/: clone-on-remote.sh  configuration.sh  create-remote-repositories.sh  create-skills-links-in-home-win.sh  create-skills-links-in-home.sh  delete-on-remote.sh  delete-repos-from-remote.sh  sync-repositories-to-remote.sh
(+82 files in other folders)
