[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synchronize"
version = "0.0.1"
authors = [
  { name="Stefan Boos", email="kontakt@boos.systems" },
]
description = "Simplify coding with support of AI agents"
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0-or-later"
license-files = [ "../LICENSE" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "ssh://git@192.168.171.35:/volume1/shared/git-repositories/ai-agent-workspace.git"
"Bug Tracker" = "ssh://git@192.168.171.35:/volume1/shared/git-repositories/ai-agent-workspace.git"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.hatch.build.targets.wheel]  
packages = ["src/synchronize"]
